--- a/stylish/components/_modal.scss
+++ b/stylish/components/_modal.scss
@@ -2,6 +2,12 @@
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
+html.modal_active{
+  overflow: hidden; width: 100%; height: 100%;-webkit-overflow-scrolling:touch; display: block;
+  body{ overflow: hidden; position: relative; width: 100%; height: 100%;-webkit-overflow-scrolling:touch; display: block}
+}
+
+
 .modal{
   position:fixed; left:0; top:0; width:100%; height:100%;visibility:hidden;@include opacity(0);z-index:-50; display: table;
 
