--- a/stylish/global/_variables.scss
+++ b/stylish/global/_variables.scss
@@ -193,8 +193,7 @@ $tooltip_border:            $color_mercury; //Tooltip background color
 $tooltip_bg:                $color_white; //Tooltip background color
 $tooltip_txt:               $color_mine_shaft; //Tooltip text color
 
-$modal_max_width:           $page_max_width/2; //Max width of modal window
-$modal_min_width:           600px; //Min width of modal window
+$modal_max_width:           600px; //Max width of modal window
 $modal_overlay_opacity:     0.7; //Overlay opacity
 
 $divider_border_color:      $color_dove_gray_light; //divider border bottom color
