--- a/stylish/components/_modal.scss
+++ b/stylish/components/_modal.scss
@@ -3,23 +3,26 @@
 
 
 html.modal_active{
-  overflow: hidden; width: 100%; height: 100%;-webkit-overflow-scrolling:touch; display: block;
-  body{ overflow: hidden; position: relative; width: 100%; height: 100%;-webkit-overflow-scrolling:touch; display: block}
+  overflow-y: hidden;-webkit-overflow-scrolling:touch; position: relative;
+  body{overflow-y: hidden;-webkit-overflow-scrolling:touch; position: relative}
 }
 
 
 .modal{
-  position:fixed; left:0; top:0; width:100%; height:100%;visibility:hidden;@include opacity(0);z-index:-50; display: table;
+  position:fixed; left:0; top:0; width:100%; height:100%;visibility:hidden;@include opacity(0);z-index:-50;
 
   //Overlay
-  .modal_overlay{position:fixed; left:0; top:0; width:100%; height:100%; visibility: hidden;@include opacity(0);@include transition-property(opacity);@include transition-duration(.3s);}
+  .m_overlay{position:fixed; left:0; top:0; width:100%; height:100%; visibility: hidden;@include opacity(0);@include transition-property(opacity);@include transition-duration(.3s);}
 
   //Position modal in the middle of the screen on scale
-  .modal_wrap{ display: table-cell; height: 100%; vertical-align: middle; padding: 0 $gutter}
+  .m_wrap{ display: block; height: 100%; position: relative; max-width: $modal_max_width; margin: 0 auto}
 
-  //Modal content
-  .modal_content{
-    padding: 30px; background-color: $color_white; margin: 0 auto; max-width:$modal_max_width; min-width: $modal_min_width; overflow-y: auto; max-height: 100%; position: relative;@include transition-property(all);@include transition-duration(.4s);
+  //Content
+  .m_content_wrap{
+    position:absolute; top:0;width: 100%; height: 100%; overflow-y: auto;
+
+    //Content wrapper to input content
+    .m_content{ padding: 30px; background-color: $color_white; position: relative; @include transition-property(all);@include transition-duration(.4s);}
 
     //Content Structure
     .m_head{
@@ -32,7 +35,7 @@ html.modal_active{
   //Active (opened state)
   &.active{
     @include opacity(1); z-index: 99999; visibility: visible;
-    .modal_overlay{@include opacity(1); visibility: visible;background-color: rgba($color_mine_shaft, $modal_overlay_opacity);}
+    .m_overlay{@include opacity(1); visibility: visible;background-color: rgba($color_mine_shaft, $modal_overlay_opacity);}
   }
 
   //Close modal button
@@ -41,56 +44,27 @@ html.modal_active{
     &:before{@extend .sy_remove:before;}
   }
 
+
   //Load modal from the top
   &[data-slide="top"]{
-    .modal_wrap{ vertical-align: top;}
-    .modal_content{ margin-top: -20%}
-
     &.active{
-      .modal_content{ margin-top:80px;}
-    }
-  }
-
-  //Load modal from the bottom
-  &[data-slide="bottom"]{
-    .modal_wrap{ vertical-align: bottom;}
-    .modal_content{ margin-bottom: -20%}
-
-    &.active{
-      .modal_content{ margin-bottom:80px;}
-    }
-  }
-
-  //Load modal from the left
-  &[data-slide="left"]{
-    .modal_content{ margin:0 0 0 -20%; float: left}
-
-    &.active{
-      .modal_content{ margin:0 0 0 80px;}
-    }
-  }
-
-  //Load modal from the right
-  &[data-slide="right"]{
-    .modal_content{ margin:0 -20% 0 0;float: right}
-
-    &.active{
-      .modal_content{ margin:0 80px 0 0; }
+      .m_content{ margin-top:15px;}
     }
   }
 
   //Load modal by scale
   &[data-slide="scale"]{
-    .modal_content{@include scale(0.6)}
-
+    .m_wrap{max-width: $modal_max_width;}
+    .m_content{@include scale(0.6)}
     &.active{
-      .modal_content{ @include scale(1)}
+      .m_content{ @include scale(1)}
     }
   }
 
   //Load modal by Full width
   &[data-size="full"]{
-    .modal_wrap{ display: block; padding: 0;}
-    .modal_content{max-width:inherit; height: 100%; padding: 0}
+    .m_wrap{ max-width: initial;}
+    .m_content_wrap{ top: 0!important}
+    .m_content{height: 100%;margin-top: 0!important}
   }
 }
