--- a/stylish/global/_buttons.scss
+++ b/stylish/global/_buttons.scss
@@ -38,11 +38,11 @@ input[type=reset]{
   }
 
   &.btn_icon_left{
-    i, .icon{   padding-right: 15px;  }
+    i, .icon{   margin-right: 15px;  }
   }
 
   &.btn_icon_right{
-    i, .icon{  padding-left: 15px; }
+    i, .icon{  margin-left: 15px; }
   }
 
 
