--- a/stylish/components/_modal.scss
+++ b/stylish/components/_modal.scss
@@ -12,7 +12,7 @@ html.modal_active{
   position:fixed; left:0; top:0; width:100%; height:100%;visibility:hidden;@include opacity(0);z-index:-50;
 
   //Overlay
-  .m_overlay{position:fixed; left:0; top:0; width:100%; height:100%; visibility: hidden;@include opacity(0);@include transition-property(opacity);@include transition-duration(.3s);}
+  .m_overlay{position:fixed; left:0; top:0; width:100%; height:100%; visibility: hidden; z-index: 1;@include opacity(0);@include transition-property(opacity);@include transition-duration(.3s);}
 
   //Position modal in the middle of the screen on scale
   .m_wrap{ display: block; height: 100%; position: relative; max-width: $modal_max_width; margin: 0 auto}
@@ -22,7 +22,7 @@ html.modal_active{
     position:absolute; top:0;width: 100%; height: 100%; overflow-y: auto;
 
     //Content wrapper to input content
-    .m_content{ padding: 30px; background-color: $color_white; position: relative; @include transition-property(all);@include transition-duration(.4s);}
+    .m_content{ padding: 30px; background-color: $color_white; position: relative; z-index: 2; @include transition-property(all);@include transition-duration(.4s);}
 
     //Content Structure
     .m_head{
