--- a/stylish/components/_accordion.scss
+++ b/stylish/components/_accordion.scss
@@ -9,7 +9,7 @@
     &.active i.a_state{@include rotate(180deg);}
   }
   .a_content{
-    display: none; background-color: $accordion_content_color; padding: 20px 10px; @include transition-property(all); @include transition-duration(.3s);
-    &.active{ display: block;}
+    display: none; background-color: $accordion_content_color; padding: 20px 10px;
+    &.active{ display: block;@include animation(fadeIn .5s);}
   }
 }
