--- a/stylish/components/_other.scss
+++ b/stylish/components/_other.scss
@@ -5,3 +5,10 @@
 /* Block or widget move */
 .block,
 .widget{ margin-bottom: 30px}
+
+
+//Fade in Animation
+@include  keyframes(fadeIn) {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
