--- a/stylish/global/_forms.scss
+++ b/stylish/global/_forms.scss
@@ -101,7 +101,7 @@ textarea{ height: 150px; padding: 12px}
 
 /* Setup custom select input */
 .select {
-  position: relative;border: 1px solid $input_border;height:$input_height;cursor: pointer;overflow:hidden; display: block;@include border-radius($global_radius);
+  position: relative;border: 1px solid $input_border;height:$input_height;cursor: pointer;overflow:hidden; background-color: $input_bg; display: block;@include border-radius($global_radius);
   &:after{ position: absolute; right: 0; top: 0; height: $input_height; z-index: 5; line-height: $input_height; width: 40px; text-align: center;  background-color: $input_bg; color: $input_text; @extend .sy_icon; @extend .sy_arrow_down:before;}
   select {position: absolute; cursor:pointer;z-index: 10;background-color: transparent;@include border-radius(0); border:none; padding-right: 0; width: 100%; height: 100%;left: 0; top: 0;}
   select:focus{outline: none;}
