--- a/stylish/global/grid/_grid_fluid.scss
+++ b/stylish/global/grid/_grid_fluid.scss
@@ -7,6 +7,11 @@
   width:(100%/$grid_col_num) * $num;
 }
 
+/* Generate grid based on items */
+@mixin cols_count($num){
+  width:(100%/$num);
+}
+
 /* Generate Pull width */
 @mixin col_pull($num){
   margin-left:-(100%/$grid_col_num) * $num;
