--- a/stylish/components/_tooltip.scss
+++ b/stylish/components/_tooltip.scss
@@ -18,39 +18,60 @@
     content: ""; position: absolute; width: 0; height: 0; border: $tooltip_arrow solid transparent;
   }
 
+  &.inactive{ left: -500000px!important;}
 
   //Position general
-  &[data-position="top"],
-  &[data-position="bottom"]{
-   &:after,
-   &:before{left: 50%; margin-left: -$tooltip_arrow;}
+  &[data-tip-position="top"],
+  &[data-tip-position="bottom"]{
+    &[data-tip-arrow="left"]{
+      &:after,
+      &:before{left: 20px;}
+    }
+    &[data-tip-arrow="center"]{
+      &:after,
+      &:before{left: 50%; margin-left: -$tooltip_arrow;}
+    }
+    &[data-tip-arrow="right"]{
+      &:after,
+      &:before{right: 20px;}
+    }
   }
 
-  &[data-position="left"],
-  &[data-position="right"]{
-   &:after,
-   &:before{top: 20px;}
+  &[data-tip-position="left"],
+  &[data-tip-position="right"]{
+    &[data-tip-arrow="top"]{
+      &:after,
+      &:before{top: 20px;}
+    }
+    &[data-tip-arrow="center"]{
+      &:after,
+      &:before{top: 50%; margin-top: -$tooltip_arrow}
+    }
+    &[data-tip-arrow="bottom"]{
+      &:after,
+      &:before{bottom: 20px;}
+    }
   }
 
 
   //Position specific
-  &[data-position="top"]{
-   &:after,&:before{bottom:-$tooltip_arrow*2;}
-   &:before{ margin-bottom: -1px}
+  &[data-tip-position="top"]{
+    &:after,&:before{bottom:-$tooltip_arrow*2;}
+    &:before{ margin-bottom: -1px}
   }
-  &[data-position="bottom"]{
-   &:after,&:before{top:-$tooltip_arrow*2;}
-   &:before{ margin-top: -1px}
+  &[data-tip-position="bottom"]{
+    &:after,&:before{top:-$tooltip_arrow*2;}
+    &:before{ margin-top: -1px}
   }
-  &[data-position="left"]{
-   left:0;
-   &:after,&:before{right:-$tooltip_arrow*2;}
-   &:before{ margin-right: -1px}
+  &[data-tip-position="left"]{
+    left:0;
+    &:after,&:before{right:-$tooltip_arrow*2;}
+    &:before{ margin-right: -1px}
   }
-  &[data-position="right"]{
-   right:0;
-   &:after,&:before{left:-$tooltip_arrow*2;}
-   &:before{ margin-left: -1px}
+  &[data-tip-position="right"]{
+    right:0;
+    &:after,&:before{left:-$tooltip_arrow*2;}
+    &:before{ margin-left: -1px}
   }
 
 
