--- a/stylish/components/_modal.scss
+++ b/stylish/components/_modal.scss
@@ -22,7 +22,7 @@ html.modal_active{
     position:absolute; top:0;width: 100%; height: 100%; overflow-y: auto;
 
     //Content wrapper to input content
-    .m_content{ padding: 30px; background-color: $color_white; position: relative; z-index: 2; @include transition-property(all);@include transition-duration(.4s);}
+    .m_content{ padding: 30px; background-color: $modal_content_bg_color; position: relative; z-index: 2; @include transition-property(all);@include transition-duration(.4s);}
 
     //Content Structure
     .m_head{
@@ -35,7 +35,7 @@ html.modal_active{
   //Active (opened state)
   &.active{
     @include opacity(1); z-index: 99999; visibility: visible;
-    .m_overlay{@include opacity(1); visibility: visible;background-color: rgba($color_mine_shaft, $modal_overlay_opacity);}
+    .m_overlay{@include opacity(1); visibility: visible;background-color: rgba($modal_overlay_bg_color, $modal_overlay_opacity);}
   }
 
   //Close modal button
