--- a/stylish/global/_buttons.scss
+++ b/stylish/global/_buttons.scss
@@ -7,7 +7,7 @@ button,
 input[type=submit],
 input[type=button],
 input[type=reset]{
-  margin: 0; font-size: $btn_txt_size; padding: $btn_padding; line-height: $btn_txt_size + 6; text-transform: uppercase;border: 1px solid; text-align: center; width: 100%; display: block; white-space: nowrap;  text-decoration: none; cursor: pointer; font-family: $body_font_family;@include transition-property(all);@include transition-duration(.3s);@include border-radius($global_radius); @include btn_color(); @include appearance(none); @include font-smoothing();
+  @include btn_style();
 
   //Big size (cca 52px)
   &.btn_big, &[data-size="big"]{ padding: $btn_padding*1.5 $btn_padding; font-size: $btn_txt_size + 6; }
