--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,7 @@ table.word_break td {
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
 /* PROJECT MIXINS STYLES */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 /* STYLISH ICONS SETUP */
@@ -968,6 +969,7 @@ input.placeholderjs {
 /* Setup custom select input */
 /* line 103, ../stylish/global/_forms.scss */
 .select {
+  height: 42px;
   position: relative;
   border: 1px solid #e5e5e5;
   height: 42px;
@@ -979,7 +981,12 @@ input.placeholderjs {
   -webkit-border-radius: 4px;
   border-radius: 4px;
 }
-/* line 105, ../stylish/global/_forms.scss */
+/* line 328, ../stylish/global/_mixins.scss */
+.select:after {
+  font-size: 18px;
+  margin-top: -9px;
+}
+/* line 106, ../stylish/global/_forms.scss */
 .select:after {
   position: absolute;
   right: 0;
@@ -992,7 +999,7 @@ input.placeholderjs {
   background-color: #ffffff;
   color: #272727;
 }
-/* line 106, ../stylish/global/_forms.scss */
+/* line 107, ../stylish/global/_forms.scss */
 .select select {
   position: absolute;
   cursor: pointer;
@@ -1008,18 +1015,22 @@ input.placeholderjs {
   left: 0;
   top: 0;
 }
-/* line 107, ../stylish/global/_forms.scss */
+/* line 109, ../stylish/global/_forms.scss */
 .select select:focus {
   outline: none;
+}
+/* line 112, ../stylish/global/_forms.scss */
+.select.disabled:after {
+  color: #c5c5c5;
 }
 
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 /* Upload custom input */
-/* line 115, ../stylish/global/_forms.scss */
+/* line 120, ../stylish/global/_forms.scss */
 .upload {
   position: relative;
 }
-/* line 117, ../stylish/global/_forms.scss */
+/* line 122, ../stylish/global/_forms.scss */
 .upload input[type=file] {
   font-size: 29px;
   width: 100%;
@@ -1032,50 +1043,52 @@ input.placeholderjs {
 
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 /* Setup forms layout */
-/* line 126, ../stylish/global/_forms.scss */
+/* line 131, ../stylish/global/_forms.scss */
 form .field, .form .field {
   margin-bottom: 20px;
   position: relative;
   list-style: none;
 }
-/* line 128, ../stylish/global/_forms.scss */
+/* line 133, ../stylish/global/_forms.scss */
 form .field.big, .form .field.big {
   margin-bottom: 40px;
 }
-/* line 129, ../stylish/global/_forms.scss */
+/* line 134, ../stylish/global/_forms.scss */
 form .field.slim, .form .field.slim {
   margin-bottom: 10px;
 }
-/* line 132, ../stylish/global/_forms.scss */
-form .field[data-required="true"] label:after, .form .field[data-required="true"] label:after {
+/* line 138, ../stylish/global/_forms.scss */
+form .field[data-required="true"] label:after,
+form .field label.required:after, .form .field[data-required="true"] label:after,
+.form .field label.required:after {
   content: "*";
   font-size: 14px;
   padding-left: 3px;
 }
-/* line 135, ../stylish/global/_forms.scss */
+/* line 141, ../stylish/global/_forms.scss */
 form .field label, .form .field label {
   display: block;
   margin-bottom: 5px;
   font-size: 20px;
 }
-/* line 139, ../stylish/global/_forms.scss */
+/* line 145, ../stylish/global/_forms.scss */
 form .field label.inline, .form .field label.inline {
   display: inline-block;
   margin-bottom: 0;
   padding-top: 5px;
 }
-/* line 146, ../stylish/global/_forms.scss */
+/* line 152, ../stylish/global/_forms.scss */
 form .field .checkbox label, form .field.checkbox label,
 form .field .radio label, form .field.radio label, .form .field .checkbox label, .form .field.checkbox label,
 .form .field .radio label, .form .field.radio label {
   margin: 0;
   display: table-cell;
 }
-/* line 149, ../stylish/global/_forms.scss */
+/* line 155, ../stylish/global/_forms.scss */
 form .field.last, .form .field.last {
   margin-bottom: 0;
 }
-/* line 155, ../stylish/global/_forms.scss */
+/* line 161, ../stylish/global/_forms.scss */
 form .validation-advice, form .error, .form .validation-advice, .form .error {
   color: #cd3a3a;
   font-size: 15px;
@@ -1083,7 +1096,7 @@ form .validation-advice, form .error, .form .validation-advice, .form .error {
   right: 15px;
   bottom: 15px;
 }
-/* line 157, ../stylish/global/_forms.scss */
+/* line 163, ../stylish/global/_forms.scss */
 form .validation-advice:before, form .error:before, .form .validation-advice:before, .form .error:before {
   padding-right: 10px;
   vertical-align: bottom;
@@ -1113,9 +1126,6 @@ input[type=reset] {
   text-decoration: none;
   cursor: pointer;
   margin: 0;
-  background-color: #3a89cd;
-  color: #ffffff;
-  border-color: #3a89cd;
   -moz-transition-property: all;
   -o-transition-property: all;
   -webkit-transition-property: all;
@@ -1128,6 +1138,9 @@ input[type=reset] {
   -webkit-appearance: none;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #3a89cd;
+  color: #ffffff;
+  border-color: #3a89cd;
   /* ---------------------------------------------------------------------------------------------------------------------------------- */
   /* Buttons Colors */
 }
@@ -1145,7 +1158,7 @@ input[type=reset].active {
   color: #ffffff;
   border-color: #2d74b1;
 }
-/* line 13, ../stylish/global/_buttons.scss */
+/* line 14, ../stylish/global/_buttons.scss */
 .btn.btn_big, .btn[data-size="big"],
 button.btn_big,
 button[data-size="big"],
@@ -1159,7 +1172,7 @@ input[type=reset][data-size="big"] {
   line-height: 24px;
   font-size: 20px;
 }
-/* line 16, ../stylish/global/_buttons.scss */
+/* line 17, ../stylish/global/_buttons.scss */
 .btn.btn_small, .btn[data-size="small"],
 button.btn_small,
 button[data-size="small"],
@@ -1173,7 +1186,7 @@ input[type=reset][data-size="small"] {
   line-height: 17px;
   font-size: 13px;
 }
-/* line 19, ../stylish/global/_buttons.scss */
+/* line 20, ../stylish/global/_buttons.scss */
 .btn.no_radius,
 button.no_radius,
 input[type=submit].no_radius,
@@ -1183,7 +1196,7 @@ input[type=reset].no_radius {
   -webkit-border-radius: 0;
   border-radius: 0;
 }
-/* line 22, ../stylish/global/_buttons.scss */
+/* line 23, ../stylish/global/_buttons.scss */
 .btn.rounded,
 button.rounded,
 input[type=submit].rounded,
@@ -1193,7 +1206,7 @@ input[type=reset].rounded {
   -webkit-border-radius: 20px;
   border-radius: 20px;
 }
-/* line 25, ../stylish/global/_buttons.scss */
+/* line 26, ../stylish/global/_buttons.scss */
 .btn.disabled, .btn:disabled,
 button.disabled,
 button:disabled,
@@ -1207,7 +1220,7 @@ input[type=reset]:disabled {
   border-color: #c5c5c5 !important;
   color: #ffffff !important;
 }
-/* line 28, ../stylish/global/_buttons.scss */
+/* line 29, ../stylish/global/_buttons.scss */
 .btn.auto_width,
 button.auto_width,
 input[type=submit].auto_width,
@@ -1216,7 +1229,7 @@ input[type=reset].auto_width {
   width: auto;
   display: inline-block;
 }
-/* line 31, ../stylish/global/_buttons.scss */
+/* line 32, ../stylish/global/_buttons.scss */
 .btn.no_word_break,
 button.no_word_break,
 input[type=submit].no_word_break,
@@ -1224,7 +1237,7 @@ input[type=button].no_word_break,
 input[type=reset].no_word_break {
   word-break: normal;
 }
-/* line 37, ../stylish/global/_buttons.scss */
+/* line 38, ../stylish/global/_buttons.scss */
 .btn.btn_icon i, .btn.btn_icon .icon, .btn.btn_icon_left i, .btn.btn_icon_left .icon, .btn.btn_icon_right i, .btn.btn_icon_right .icon,
 button.btn_icon i,
 button.btn_icon .icon,
@@ -1253,7 +1266,7 @@ input[type=reset].btn_icon_right .icon {
   font-size: 18px;
   vertical-align: middle;
 }
-/* line 41, ../stylish/global/_buttons.scss */
+/* line 42, ../stylish/global/_buttons.scss */
 .btn.btn_icon_left i, .btn.btn_icon_left .icon,
 button.btn_icon_left i,
 button.btn_icon_left .icon,
@@ -1265,7 +1278,7 @@ input[type=reset].btn_icon_left i,
 input[type=reset].btn_icon_left .icon {
   margin-right: 15px;
 }
-/* line 45, ../stylish/global/_buttons.scss */
+/* line 46, ../stylish/global/_buttons.scss */
 .btn.btn_icon_right i, .btn.btn_icon_right .icon,
 button.btn_icon_right i,
 button.btn_icon_right .icon,
@@ -3660,35 +3673,35 @@ table th.last, table td.last {
 .tip[data-tip-position="right"]:before {
   margin-left: -1px;
 }
-/* line 358, ../stylish/global/_mixins.scss */
+/* line 368, ../stylish/global/_mixins.scss */
 .tip[data-tip-position="top"]:after {
   border-top-color: #ffffff;
 }
-/* line 359, ../stylish/global/_mixins.scss */
+/* line 369, ../stylish/global/_mixins.scss */
 .tip[data-tip-position="bottom"]:after {
   border-bottom-color: #ffffff;
 }
-/* line 360, ../stylish/global/_mixins.scss */
+/* line 370, ../stylish/global/_mixins.scss */
 .tip[data-tip-position="left"]:after {
   border-left-color: #ffffff;
 }
-/* line 361, ../stylish/global/_mixins.scss */
+/* line 371, ../stylish/global/_mixins.scss */
 .tip[data-tip-position="right"]:after {
   border-right-color: #ffffff;
 }
-/* line 363, ../stylish/global/_mixins.scss */
+/* line 373, ../stylish/global/_mixins.scss */
 .tip[data-tip-position="top"]:before {
   border-top-color: #e5e5e5;
 }
-/* line 364, ../stylish/global/_mixins.scss */
+/* line 374, ../stylish/global/_mixins.scss */
 .tip[data-tip-position="bottom"]:before {
   border-bottom-color: #e5e5e5;
 }
-/* line 365, ../stylish/global/_mixins.scss */
+/* line 375, ../stylish/global/_mixins.scss */
 .tip[data-tip-position="left"]:before {
   border-left-color: #e5e5e5;
 }
-/* line 366, ../stylish/global/_mixins.scss */
+/* line 376, ../stylish/global/_mixins.scss */
 .tip[data-tip-position="right"]:before {
   border-right-color: #e5e5e5;
 }
@@ -6250,202 +6263,202 @@ table th.last, table td.last {
   height: auto;
 }
 
-/* line 343, ../stylish/global/_mixins.scss */
+/* line 353, ../stylish/global/_mixins.scss */
 .m_bottom100 {
   margin-bottom: 100px;
 }
 
-/* line 344, ../stylish/global/_mixins.scss */
+/* line 354, ../stylish/global/_mixins.scss */
 .m_top100 {
   margin-top: 100px;
 }
 
-/* line 345, ../stylish/global/_mixins.scss */
+/* line 355, ../stylish/global/_mixins.scss */
 .p_bottom100 {
   padding-bottom: 100px;
 }
 
-/* line 346, ../stylish/global/_mixins.scss */
+/* line 356, ../stylish/global/_mixins.scss */
 .p_top100 {
   padding-top: 100px;
 }
 
-/* line 343, ../stylish/global/_mixins.scss */
+/* line 353, ../stylish/global/_mixins.scss */
 .m_bottom90 {
   margin-bottom: 90px;
 }
 
-/* line 344, ../stylish/global/_mixins.scss */
+/* line 354, ../stylish/global/_mixins.scss */
 .m_top90 {
   margin-top: 90px;
 }
 
-/* line 345, ../stylish/global/_mixins.scss */
+/* line 355, ../stylish/global/_mixins.scss */
 .p_bottom90 {
   padding-bottom: 90px;
 }
 
-/* line 346, ../stylish/global/_mixins.scss */
+/* line 356, ../stylish/global/_mixins.scss */
 .p_top90 {
   padding-top: 90px;
 }
 
-/* line 343, ../stylish/global/_mixins.scss */
+/* line 353, ../stylish/global/_mixins.scss */
 .m_bottom80 {
   margin-bottom: 80px;
 }
 
-/* line 344, ../stylish/global/_mixins.scss */
+/* line 354, ../stylish/global/_mixins.scss */
 .m_top80 {
   margin-top: 80px;
 }
 
-/* line 345, ../stylish/global/_mixins.scss */
+/* line 355, ../stylish/global/_mixins.scss */
 .p_bottom80 {
   padding-bottom: 80px;
 }
 
-/* line 346, ../stylish/global/_mixins.scss */
+/* line 356, ../stylish/global/_mixins.scss */
 .p_top80 {
   padding-top: 80px;
 }
 
-/* line 343, ../stylish/global/_mixins.scss */
+/* line 353, ../stylish/global/_mixins.scss */
 .m_bottom70 {
   margin-bottom: 70px;
 }
 
-/* line 344, ../stylish/global/_mixins.scss */
+/* line 354, ../stylish/global/_mixins.scss */
 .m_top70 {
   margin-top: 70px;
 }
 
-/* line 345, ../stylish/global/_mixins.scss */
+/* line 355, ../stylish/global/_mixins.scss */
 .p_bottom70 {
   padding-bottom: 70px;
 }
 
-/* line 346, ../stylish/global/_mixins.scss */
+/* line 356, ../stylish/global/_mixins.scss */
 .p_top70 {
   padding-top: 70px;
 }
 
-/* line 343, ../stylish/global/_mixins.scss */
+/* line 353, ../stylish/global/_mixins.scss */
 .m_bottom60 {
   margin-bottom: 60px;
 }
 
-/* line 344, ../stylish/global/_mixins.scss */
+/* line 354, ../stylish/global/_mixins.scss */
 .m_top60 {
   margin-top: 60px;
 }
 
-/* line 345, ../stylish/global/_mixins.scss */
+/* line 355, ../stylish/global/_mixins.scss */
 .p_bottom60 {
   padding-bottom: 60px;
 }
 
-/* line 346, ../stylish/global/_mixins.scss */
+/* line 356, ../stylish/global/_mixins.scss */
 .p_top60 {
   padding-top: 60px;
 }
 
-/* line 343, ../stylish/global/_mixins.scss */
+/* line 353, ../stylish/global/_mixins.scss */
 .m_bottom50 {
   margin-bottom: 50px;
 }
 
-/* line 344, ../stylish/global/_mixins.scss */
+/* line 354, ../stylish/global/_mixins.scss */
 .m_top50 {
   margin-top: 50px;
 }
 
-/* line 345, ../stylish/global/_mixins.scss */
+/* line 355, ../stylish/global/_mixins.scss */
 .p_bottom50 {
   padding-bottom: 50px;
 }
 
-/* line 346, ../stylish/global/_mixins.scss */
+/* line 356, ../stylish/global/_mixins.scss */
 .p_top50 {
   padding-top: 50px;
 }
 
-/* line 343, ../stylish/global/_mixins.scss */
+/* line 353, ../stylish/global/_mixins.scss */
 .m_bottom40 {
   margin-bottom: 40px;
 }
 
-/* line 344, ../stylish/global/_mixins.scss */
+/* line 354, ../stylish/global/_mixins.scss */
 .m_top40 {
   margin-top: 40px;
 }
 
-/* line 345, ../stylish/global/_mixins.scss */
+/* line 355, ../stylish/global/_mixins.scss */
 .p_bottom40 {
   padding-bottom: 40px;
 }
 
-/* line 346, ../stylish/global/_mixins.scss */
+/* line 356, ../stylish/global/_mixins.scss */
 .p_top40 {
   padding-top: 40px;
 }
 
-/* line 343, ../stylish/global/_mixins.scss */
+/* line 353, ../stylish/global/_mixins.scss */
 .m_bottom30 {
   margin-bottom: 30px;
 }
 
-/* line 344, ../stylish/global/_mixins.scss */
+/* line 354, ../stylish/global/_mixins.scss */
 .m_top30 {
   margin-top: 30px;
 }
 
-/* line 345, ../stylish/global/_mixins.scss */
+/* line 355, ../stylish/global/_mixins.scss */
 .p_bottom30 {
   padding-bottom: 30px;
 }
 
-/* line 346, ../stylish/global/_mixins.scss */
+/* line 356, ../stylish/global/_mixins.scss */
 .p_top30 {
   padding-top: 30px;
 }
 
-/* line 343, ../stylish/global/_mixins.scss */
+/* line 353, ../stylish/global/_mixins.scss */
 .m_bottom20 {
   margin-bottom: 20px;
 }
 
-/* line 344, ../stylish/global/_mixins.scss */
+/* line 354, ../stylish/global/_mixins.scss */
 .m_top20 {
   margin-top: 20px;
 }
 
-/* line 345, ../stylish/global/_mixins.scss */
+/* line 355, ../stylish/global/_mixins.scss */
 .p_bottom20 {
   padding-bottom: 20px;
 }
 
-/* line 346, ../stylish/global/_mixins.scss */
+/* line 356, ../stylish/global/_mixins.scss */
 .p_top20 {
   padding-top: 20px;
 }
 
-/* line 343, ../stylish/global/_mixins.scss */
+/* line 353, ../stylish/global/_mixins.scss */
 .m_bottom10 {
   margin-bottom: 10px;
 }
 
-/* line 344, ../stylish/global/_mixins.scss */
+/* line 354, ../stylish/global/_mixins.scss */
 .m_top10 {
   margin-top: 10px;
 }
 
-/* line 345, ../stylish/global/_mixins.scss */
+/* line 355, ../stylish/global/_mixins.scss */
 .p_bottom10 {
   padding-bottom: 10px;
 }
 
-/* line 346, ../stylish/global/_mixins.scss */
+/* line 356, ../stylish/global/_mixins.scss */
 .p_top10 {
   padding-top: 10px;
 }
