--- a/stylish/global/_mixins.scss
+++ b/stylish/global/_mixins.scss
@@ -322,14 +322,24 @@
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
+//Select size
+@mixin select_size($height: $input_height, $icon_size:$select_icon_size){
+  height: $height;
+  &:after{ font-size:$icon_size; margin-top: -($select_icon_size/2)}
+}
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------- */
+
+
 //Button size
 @mixin btn_size($padding:$btn_default_padding, $font_size:$btn_default_txt_size, $line_height:$btn_default_line_height){
   padding: $padding;  line-height: $line_height;  font-size: $font_size;
 }
 
 //Default button style
-@mixin btn_style($text_transform: $btn_transform, $font_family:$body_font_family, $radius:$btn_radius, $border_width:1px, $border_style:solid,$text_align:center, $width:100%, $display:block, $white_space:nowrap, $text_decoration: none, $cursor:pointer, $margin:0){
-   @include btn_size(); text-transform: $text_transform;  font-family: $body_font_family;  @include border-radius($radius);  border: $border_width $border_style;  text-align: $text_align;  width:$width;  display: $display;  white-space: $white_space;  text-decoration: $text_decoration;  cursor: $cursor;  margin: $margin;  @include btn_color();  @include transition-property(all);  @include transition-duration(.3s);  @include appearance(none);  @include font-smoothing();
+@mixin btn_style($text_transform: $btn_transform, $font_family:$body_font_family, $radius:$btn_radius, $border_width:$btn_border_width, $border_style:$btn_border_style,$text_align:$btn_txt_align, $width:100%, $display:block, $white_space:nowrap, $text_decoration: $btn_txt_decoration, $cursor:pointer, $margin:0){
+  @include btn_size(); text-transform: $text_transform;  font-family: $body_font_family;  @include border-radius($radius);  border: $border_width $border_style;  text-align: $text_align;  width:$width;  display: $display;  white-space: $white_space;  text-decoration: $text_decoration;  cursor: $cursor;  margin: $margin;  @include transition-property(all);  @include transition-duration(.3s);  @include appearance(none);  @include font-smoothing();
 }
 
 
@@ -388,6 +398,4 @@
   @if $font_family{
     font-family: $font_family;
   }
-
-
 }
