--- a/stylish/global/_mixins.scss
+++ b/stylish/global/_mixins.scss
@@ -338,8 +338,8 @@
 }
 
 //Default button style
-@mixin btn_style($text_transform: $btn_transform, $font_family:$body_font_family, $radius:$btn_radius, $border_width:$btn_border_width, $border_style:$btn_border_style,$text_align:$btn_txt_align, $width:100%, $display:block, $white_space:nowrap, $text_decoration: $btn_txt_decoration, $cursor:pointer, $margin:0){
-  @include btn_size(); text-transform: $text_transform;  font-family: $body_font_family;  @include border-radius($radius);  border: $border_width $border_style;  text-align: $text_align;  width:$width;  display: $display;  white-space: $white_space;  text-decoration: $text_decoration;  cursor: $cursor;  margin: $margin;  @include transition-property(all);  @include transition-duration(.3s);  @include appearance(none);  @include font-smoothing();
+@mixin btn_style($text_transform: $btn_transform, $font_family:$body_font_family, $font_weight:$btn_txt_weight, $radius:$btn_radius, $border_width:$btn_border_width, $border_style:$btn_border_style,$text_align:$btn_txt_align, $width:100%, $display:block, $white_space:nowrap, $text_decoration: $btn_txt_decoration, $cursor:pointer, $margin:0){
+  @include btn_size(); text-transform: $text_transform;  font-family: $body_font_family; font-weight: $font_weight;  @include border-radius($radius);  border: $border_width $border_style;  text-align: $text_align;  width:$width;  display: $display;  white-space: $white_space;  text-decoration: $text_decoration;  cursor: $cursor;  margin: $margin; @include transition-property(all);  @include transition-duration(.3s);  @include appearance(none);  @include font-smoothing();
 }
 
 
